# Elevator

./: .gitignore  CMakeLists.txt  ElevatorUI.sln
Elevator/: CMakeLists.txt  building.cpp  building.h  console.cpp  console.h  elevator.cpp  elevator.h  file.cpp  file.h  human.cpp  human.h  main.cpp  parameter.h  people.cpp  people.h
ElevatorUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
